# TradeTerminal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dataservice/: cache.py  main.py  protocol.py  server.py  yahoo.py
engine/: CMakeLists.txt
engine/include/engine/: ack_latency.h  alpaca_broker.h  alpaca_feed.h  broker.h  builtin_sma.h  clock.h  engine.h  events.h  exec_sim.h  feed.h  feed_msg.h  finnhub_feed.h  ibkr_broker.h  ibkr_feed.h  latency.h  polygon_feed.h  portfolio.h  price_tick.h  spsc_ring.h  strategy_host.h  tick_log.h  tws_broker.h  tws_feed.h  version.h
engine/src/: alpaca_broker.cpp  alpaca_feed.cpp  alpaca_util.h  alpaca_ws.h  clock.cpp  engine.cpp  exec_sim.cpp  finnhub_feed.cpp  ibkr_broker.cpp  ibkr_feed.cpp  net_common.cpp  net_util.h  net_ws.h  polygon_feed.cpp  portfolio.cpp  strategy_host.cpp  tick_log.cpp  tws_broker.cpp  tws_feed.cpp  version.cpp
engine/tests/: test_ack_latency.cpp  test_alpaca_feed_parse.cpp  test_alpaca_parse.cpp  test_engine.cpp  test_exec_brackets.cpp  test_finnhub_parse.cpp  test_ibkr_parse.cpp  test_polygon_parse.cpp  test_price_tick.cpp  test_spsc_ring.cpp  test_strategy_host.cpp  test_strategy_registry.cpp  test_tick_log.cpp
scripts/: Install-IbGateway.ps1  Install-IbkrAutoLogin.ps1  Remove-IbkrAccount.ps1  Save-IbkrCred.ps1  Start-IbGateway.ps1  Start-IbkrLogin.ps1  Stop-IbkrLogin.ps1  Stop-IbkrSession.ps1  Switch-IbkrAccount.ps1  Update-And-Restart.ps1  vps_bootstrap.ps1
sdk/include/tt/: events.h  strategy_api.h  strategy_registry.h
strategies/: README.md  bollinger_reversion.cpp  donchian_trend.cpp  orb_breakout.cpp  rsi2_pullback.cpp  scalper_burst.cpp  sma_crossover.cpp
terminal/: CMakeLists.txt
terminal/cmake/: git_commit.cmake
terminal/src/: account_store.cpp  account_store.h  alerts.cpp  alerts.h  app.cpp  app.h  app_icon.h  build_info.h.in  candle_plot.cpp  candle_plot.h  config.cpp  config.h  dev_paths.h.in  journal.cpp  journal.h  main.cpp  market_data.h  ui_hints.h  update_check.cpp  update_check.h
terminal/src/net/: diag_server.cpp  diag_server.h  gateway_data.cpp  gateway_data.h  ipc_client.cpp  ipc_client.h  market_source.h  status_server.cpp  status_server.h  tws_data.cpp  tws_data.h
terminal/src/panels/: backtest.cpp  backtest.h  blotter.cpp  blotter.h  chart.cpp  chart.h  journal_panel.cpp  journal_panel.h  log_console.cpp  log_console.h  positions.cpp  positions.h  replay.cpp  replay.h  strategy_mgr.cpp  strategy_mgr.h  sweep.cpp  sweep.h  trade.cpp  trade.h  watchlist.cpp  watchlist.h
terminal/tests/: test_log_console.cpp
tools/: README.md
